--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.2.18",
     "sharp": "^0.32.6",
-    "typescript": "^4.7.4"
+    "typescript": "~5.1.0"
   },
   "packageManager": "yarn@4.1.1",
   "engines": {
@@ -58,6 +58,7 @@
     }
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^2.1.4"
+    "babel-plugin-styled-components": "^2.1.4",
+    "styled-components": "^6.1.8"
   }
 }
