--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@metamask/providers": "^16.0.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
@@ -64,7 +65,7 @@
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.2.18",
     "rimraf": "^3.0.2",
-    "typescript": "^4.7.4"
+    "typescript": "5.1.6"
   },
   "engines": {
     "node": ">=18.6.0"
