--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,15 +1,16 @@
 {
   "name": "snap",
   "version": "0.1.0",
-  "description": "The 'Hello, world!' of MetaMask Snaps, now written in TypeScript.",
+  "description": "Get Farcaster trending mints notifications hourly on MetaMask.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MetaMask/template-snap-monorepo.git"
+    "url": "https://github.com/heynish/farnotify.git"
   },
   "license": "(MIT-0 OR Apache-2.0)",
   "main": "./dist/bundle.js",
   "files": [
     "dist/",
+    "images/",
     "snap.manifest.json"
   ],
   "scripts": {
@@ -54,7 +55,7 @@
     "prettier-plugin-packagejson": "^2.2.11",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.1.0",
-    "typescript": "^4.7.4"
+    "typescript": "5.1.6"
   },
   "packageManager": "yarn@3.2.1",
   "engines": {
