--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -4,10 +4,10 @@
   "proposedName": "FarNotify",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MetaMask/template-snap-monorepo.git"
+    "url": "https://github.com/heynish/farnotify.git"
   },
   "source": {
-    "shasum": "R8MWvDXfgMrb1KeI+uFJJHwGbAc8jtZ9G9qpSE96gKY=",
+    "shasum": "/Yf6UIAYaO9fGDIvYKiCQ0MJzVmEB8s4RsC2WwXRikw=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
