--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "snap",
-  "version": "0.1.0",
-  "description": "Get Farcaster trending mints notifications hourly on MetaMask.",
+  "name": "farnotify-snap",
+  "version": "1.0.1",
+  "description": "Get hourly farcaster trending mints and casts on MetaMask.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/heynish/farnotify.git"
+    "url": "https://github.com/heynish/farnotify-snap"
   },
   "license": "(MIT-0 OR Apache-2.0)",
   "main": "./dist/bundle.js",
